Bug 156378 - Pressing F1 with a function selected in the Functions sidebar should open corresponding help page
Summary: Pressing F1 with a function selected in the Functions sidebar should open cor...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.4.2 release
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:24.2.0 inReleaseNotes:24.2
Keywords:
Depends on:
Blocks: Sidebar-Functions Help-Link
  Show dependency treegraph
 
Reported: 2023-07-19 13:06 UTC by Rafael Lima
Modified: 2024-10-20 22:52 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2023-07-19 13:06:39 UTC
Steps to reproduce
1) In Calc open the Functions sidebar (View - Functions List)
2) Click any of the functions in the list
3) Press F1

Actual results:
This will open the generic help page about the function list:
file:///usr/share/libreoffice/help/en-US/text/scalc/01/04080000.html?System=UNIX&DbPAR=CALC&HID=modules/scalc/ui/functionpanel/funclist#bm_id3147126

Expected results:
The help page about the selected function should be opened

Note that this already works in the Function Wizard. I am proposing the same behavior applies to the sidebar as well.

System info:
Version: 7.5.4.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:7.5.4-0ubuntu0.23.04.1
Calc: threaded
Comment 1 Rafael Lima 2023-07-19 13:10:12 UTC
This is actually a simple fix. Proposed patch here:
https://gerrit.libreoffice.org/c/core/+/154617
Comment 2 stragu 2023-07-19 14:43:58 UTC
Confirmed in:

Version: 7.5.5.2 (X86_64) / LibreOffice Community
Build ID: ca8fe7424262805f223b9a2334bc7181abbcbf5e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Added a few other Sidebar help issues in "see also", in case you are interested.
Comment 3 ady 2023-07-19 19:40:22 UTC
(In reply to Rafael Lima from comment #0)
> Steps to reproduce
> 1) In Calc open the Functions sidebar (View - Functions List)
> 2) Click any of the functions in the list
> 3) Press F1

Please keep in mind that if the steps are slightly different:
1. In Calc open the Functions sidebar (View - Functions List)
2. Press F1

...(IOW, not having a specific function selected) then the Help system should still point to the generic Functions sidebar help content.
Comment 4 Commit Notification 2023-07-20 16:30:27 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b21159a74f287acd07c94422eb5cb3375f06c6bc

tdf#156378 Open function help page on F1 in the Functions sidebar

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 stragu 2024-10-20 22:52:16 UTC
Verified in:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5cf912b08e4a22f66ab1ec5fa601ba3e50e3c4cc
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Added to release notes: https://wiki.documentfoundation.org/index.php?title=ReleaseNotes%2F24.2&type=revision&diff=772985&oldid=770947

Thanks Rafael!