tdf#156378 Open function help page on F1 in the Functions sidebar

With this patch, when the user opens the Functions sidebar, select an entry and presses F1, the help page about the selected function will be shown.

Change-Id: I37eecc4e325cee7f25ddb1cd81098ca318ce6518
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154617
Tested-by: Jenkins
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>